Sat, 21 Oct 2006 12:15:30 +0200 <thp@perli.net>
        * src/gpodder/libipodsync.py: Defaulting to 60 minutes podcast time
	  when not able to get real length (and spit out a warning for it)

Sat, 30 Sep 2006 20:34:19 +0200 <thp@perli.net>
        * TODO: updated TODO list

Wed, 20 Sep 2006 13:10:47 +0200 <thp@perli.net>
        * setup.py: Added sv + it to languages list
        * data/po/it.po: Added Italian translation by Antonio Roversi

Thu, 10 Aug 2006 16:28:39 +0200 <thp@perli.net>
        * data/gpodder.desktop: Added patch from Thomas Nilsson

Thu, 10 Aug 2006 15:30:22 +0200 <thp@perli.net>
        * Makefile: Modified some statements to work better on BSD-like
          systems (like Mac OS X)
        * data/po/sv.po: Added Swedish translation by Thomas Nilsson

Mon, 07 Aug 2006 13:57:59 +0200 <thp@perli.net>
	* src/gpodder/libpodcasts.py: Improvements in get_filename
	* src/gpodder/libgpodder.py: Generate new filenames when 
	  different URL channels have same "filename" property, so 
	  these don't collide (thanks to ubunt2@gmail.com for reporting)
	* src/gpodder/gpodder.py: Removed shortname property references
	* Clean-up: Removed orphaned "shortname" property on channel

Wed, 02 Aug 2006 20:21:49 +0200 <thp@perli.net>
	* src/gpodder/libpodcasts.py: strip channel and episode title 
          when changing it (so titles with a trailing newline don't mess 
          up the episode list -- first seen with the play.fm podcast)
	* Makefile: improved "make cl" target support

Sun, 30 Jul 2006 15:11:51 +0200 <thp@perli.net>
	* Added new makefile target "cl" to automatically generate a 
          new changelog entry with right formatting
        * Housekeeping for going svn again (version. debugging variable)

Fri, 28 Jul 2006 14:34:37 +0200 <thp@perli.net>
	* ** gPodder version 0.8.0 is here! **
	* Thanks to all the contributors that helped make this release
	  possible, especially thanks to the gpodder-devel list users
	* Updated README, TODO, ...
