@@ -13,6 +13,7 @@ Thanks to all the other patch writers:
   Stylianos Papanastasiou <stelios@dcs.gla.ac.uk> (patch for "downloaded move")
   Ortwin Forster <ortwin@videotron.ca> (patch for saxutils.escape in localdb)
   Camille Moncelier <pix@devlife.org> (patch for iPod video device support)
+  Nick <nikosapi@gmail.com> (patch for iPod podcast release date+cover support)
 
 
 Thanks for bug reports and other suggestions go out to:
