@@ -1,3 +1,10 @@
+Mon, 13 Nov 2006 12:06:12 +0100 <thp@perli.net>
+        * src/gpodder/libipodsync.py: incorporated (slightly modified) 
+          patch from (nikosapi gmail com) to add "time released" and 
+          cover (for photo/color/nano iPods) to iTunesDB
+        * AUTHORS: updated list of patch writers
+        * bin/gpodder: bumped version + release date
+
 Sat, 21 Oct 2006 12:15:30 +0200 <thp@perli.net>
         * src/gpodder/libipodsync.py: Defaulting to 60 minutes podcast time
 	  when not able to get real length (and spit out a warning for it)
